find_package(peff REQUIRED)
find_package(re2c REQUIRED)
find_package(slake REQUIRED)

include_directories(${CMAKE_CURRENT_BINARY_DIR})

file(GLOB SRC *.h *.hh *.c *.cc)
add_compile_definitions(_CRT_SECURE_NO_WARNINGS SLKC_IS_BUILDING=1)
add_executable(slkc ${SRC})

target_link_libraries(slkc PRIVATE slake peff_advutils_static)
set_property(TARGET slkc PROPERTY CXX_STANDARD 20)

set(SLKC_WITH_LANGUAGE_SERVER TRUE CACHE BOOL "Build SLKC with language server support")
set(SLKC_WITH_AST_DUMPING FALSE CACHE BOOL "Enable AST dumping for SLKC")

if(SLKC_WITH_AST_DUMPING)
    find_package(wandjson REQUIRED)
    target_link_libraries(slkc PRIVATE wandjson_static)
endif()

configure_file("config.h.in" ${CMAKE_CURRENT_BINARY_DIR}/config.h)

add_subdirectory("ast")
add_subdirectory("comp")
add_subdirectory("decomp")

if(SLKC_WITH_LANGUAGE_SERVER)
    add_subdirectory("server")
endif()
